SEO + changed titles

--- a/services/designs/index.html
+++ b/services/designs/index.html
@@ -4,59 +4,75 @@
     <!-- Metas -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
-    />
-    <meta
-      name="keywords"
-      content="HTML5 Template Hubfolio Multi-Purpose themeforest"
-    />
-    <meta
-      name="description"
-      content="Hubfolio - Multi-Purpose HTML5 Template"
-    />
-    <meta name="author" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
+    <meta name="keywords" content="UI/UX design, graphic design, branding, web design, logo design, digital design, creative agency, Warsaw" />
+    <meta name="description" content="Top design agency in Warsaw specializing in UI/UX, graphic design, branding, web and logo design for businesses seeking creative digital solutions." />
+    <meta name="author" content="WK.Pages Design" />
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+    <meta name="language" content="en" />
 
     <!-- Title  -->
-    <title>Hubfolio</title>
+    <title>wk.pages | UI/UX & Graphic Design</title>
 
-        <!-- Meta Pixel Code -->
-        <script>
-          !(function (f, b, e, v, n, t, s) {
-            if (f.fbq) return;
-            n = f.fbq = function () {
-              n.callMethod
-                ? n.callMethod.apply(n, arguments)
-                : n.queue.push(arguments);
-            };
-            if (!f._fbq) f._fbq = n;
-            n.push = n;
-            n.loaded = !0;
-            n.version = "2.0";
-            n.queue = [];
-            t = b.createElement(e);
-            t.async = !0;
-            t.src = v;
-            s = b.getElementsByTagName(e)[0];
-            s.parentNode.insertBefore(t, s);
-          })(
-            window,
-            document,
-            "script",
-            "https://connect.facebook.net/en_US/fbevents.js"
-          );
-          fbq("init", "3315422861933178");
-          fbq("track", "PageView");
-        </script>
-        <noscript
-          ><img
-            height="1"
-            width="1"
-            style="display: none"
-            src="https://www.facebook.com/tr?id=3315422861933178&ev=PageView&noscript=1"
-        /></noscript>
-        <!-- End Meta Pixel Code -->
+    <meta property="og:title" content="wk.pages | UI/UX & Graphic Design" />
+    <meta property="og:description" content="Top design agency in Warsaw specializing in UI/UX, graphic design, branding, web and logo design for businesses seeking creative digital solutions." />
+    <meta property="og:image" content="https://wkpages.com/assets/imgs/square_logo.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://wkpages.com/services/designs/index.html" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="wk.pages" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="wk.pages | UI/UX & Graphic Design" />
+    <meta name="twitter:description" content="Top design agency in Warsaw specializing in UI/UX, graphic design, branding, web and logo design for businesses seeking creative digital solutions." />
+    <meta name="twitter:image" content="https://wkpages.com/assets/imgs/square_logo.jpg" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://wkpages.com/services/designs/index.html" />
+    <link rel="alternate" href="https://wkpages.com/services/designs/index.html" hreflang="en" />
+    <link rel="alternate" href="https://wkpages.com/services/designs/index.html" hreflang="x-default" />
+
+    <!-- Facebook Domain Verification -->
+    <meta name="facebook-domain-verification" content="l3uyvqjwaim3srni70qlbrlzf7xpp0" />
+
+    <!-- Sitemap -->
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
+
+    <!-- Schema.org markup for ProfessionalService -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ProfessionalService",
+        "name": "WK.Pages Design",
+        "image": "https://wkpages.com/assets/imgs/square_logo.jpg",
+        "description": "Creative agency in Warsaw specializing in UI/UX, graphic design, branding, and digital design solutions.",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Chmielna 25/2",
+          "addressLocality": "Warsaw",
+          "addressRegion": "Mazowieckie",
+          "postalCode": "02-495",
+          "addressCountry": "Poland"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": "52.2297",
+          "longitude": "21.0122"
+        },
+        "url": "https://wkpages.com/services/designs/index.html",
+        "telephone": "+48518922121",
+        "priceRange": "$$",
+        "openingHours": "Mo-Fr 09:00-18:00",
+        "sameAs": [
+          "https://www.facebook.com/profile.php?id=61567880623368",
+          "https://www.instagram.com/wk.pages/profilecard/?igsh=a3dmZ3p4Z3J0bHU5",
+          "https://www.linkedin.com/company/wkpages"
+        ]
+      }
+    </script>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/imgs/favicon.ico" />
@@ -356,7 +372,7 @@
           >
             <div class="background"></div>
             <div class="shape">
-              <img src="assets/imgs/header/shape.svg" alt="" />
+              <img src="assets/imgs/header/shape.svg" alt="Decorative Shape Graphic" />
             </div>
             <div class="container">
               <div class="caption">
@@ -469,13 +485,13 @@
                         <div class="d-flex align-items-center">
                           <span>Launch My Brand</span>
                           <span class="icon ml-10">
-                            <img src="../common/imgs/icons/arrow-top-right.svg" alt="" />
+                            <img src="../common/imgs/icons/arrow-top-right.svg" alt="Arrow Icon" />
                           </span>
                         </div>
                       </a>
                     </div>
                     <div class="img">
-                      <img src="assets/imgs/services/1.svg" alt="" />
+                      <img src="assets/imgs/services/1.svg" alt="UI/UX Design Service Icon" />
                     </div>
                   </div>
               
@@ -493,13 +509,13 @@
                         <div class="d-flex align-items-center">
                           <span>Craft My Identity</span>
                           <span class="icon ml-10">
-                            <img src="../common/imgs/icons/arrow-top-right.svg" alt="" />
+                            <img src="../common/imgs/icons/arrow-top-right.svg" alt="Arrow Icon" />
                           </span>
                         </div>
                       </a>
                     </div>
                     <div class="img">
-                      <img src="assets/imgs/services/2.svg" alt="" />
+                      <img src="assets/imgs/services/2.svg" alt="Branding Service Icon" />
                     </div>
                   </div>
               
@@ -517,13 +533,13 @@
                         <div class="d-flex align-items-center">
                           <span>Start Web Project</span>
                           <span class="icon ml-10">
-                            <img src="../common/imgs/icons/arrow-top-right.svg" alt="" />
+                            <img src="../common/imgs/icons/arrow-top-right.svg" alt="Arrow Icon" />
                           </span>
                         </div>
                       </a>
                     </div>
                     <div class="img">
-                      <img src="assets/imgs/services/3.svg" alt="" />
+                      <img src="assets/imgs/services/3.svg" alt="Graphic Design Service Icon" />
                     </div>
                   </div>
                 </div>
@@ -551,7 +567,7 @@
                 <div class="col-lg-12">
                   <div class="item mt-60">
                     <div class="img fit-img">
-                      <img src="assets/imgs/works/1.jpg" alt="" />
+                      <img src="assets/imgs/works/1.jpg" alt="UI/UX Design Portfolio Example 1" />
                       <a
                         href="../inner_pages/portfolio-standard.html"
                         class="plink"
@@ -566,7 +582,7 @@
                 <div class="col-lg-6">
                   <div class="item mt-60">
                     <div class="img fit-img">
-                      <img src="assets/imgs/works/2.jpg" alt="" />
+                      <img src="assets/imgs/works/2.jpg" alt="UI/UX Design Portfolio Example 2" />
                       <a
                         href="../inner_pages/portfolio-standard.html"
                         class="plink"
@@ -581,7 +597,7 @@
                 <div class="col-lg-6">
                   <div class="item mt-60">
                     <div class="img fit-img">
-                      <img src="assets/imgs/works/3.jpg" alt="" />
+                      <img src="assets/imgs/works/3.jpg" alt="UI/UX Design Portfolio Example 3" />
                       <a
                         href="../inner_pages/portfolio-standard.html"
                         class="plink"
@@ -596,7 +612,7 @@
                 <div class="col-lg-6">
                   <div class="item mt-60">
                     <div class="img fit-img">
-                      <img src="assets/imgs/works/4.jpg" alt="" />
+                      <img src="assets/imgs/works/4.jpg" alt="UI/UX Design Portfolio Example 4" />
                       <a
                         href="../inner_pages/portfolio-standard.html"
                         class="plink"
@@ -611,7 +627,7 @@
                 <div class="col-lg-6">
                   <div class="item mt-60">
                     <div class="img fit-img">
-                      <img src="assets/imgs/works/5.jpg" alt="" />
+                      <img src="assets/imgs/works/5.jpg" alt="UI/UX Design Portfolio Example 5" />
                       <a
                         href="../inner_pages/portfolio-standard.html"
                         class="plink"
@@ -676,7 +692,7 @@
                         <div class="col-md-4">
                           <div class="sm-hide">
                             <a href="#0" class="d-flex align-items-end">
-                              <img src="assets/imgs/services/arrow-rb.png" alt="" class="icon-img-70">
+                              <img src="assets/imgs/services/arrow-rb.png" alt="Arrow Right Bottom Icon" class="icon-img-70">
                               <span class="ml-20 text-u fz-14">Discover UI/UX</span>
                             </a>
                           </div>
@@ -736,7 +752,7 @@
                         <div class="col-md-4">
                           <div class="sm-hide">
                             <a href="#0" class="d-flex align-items-end">
-                              <img src="assets/imgs/services/arrow-rb.png" alt="" class="icon-img-70">
+                              <img src="assets/imgs/services/arrow-rb.png" alt="Arrow Right Bottom Icon" class="icon-img-70">
                               <span class="ml-20 text-u fz-14">Explore Branding</span>
                             </a>
                           </div>
@@ -796,7 +812,7 @@
                         <div class="col-md-4">
                           <div class="sm-hide">
                             <a href="#0" class="d-flex align-items-end">
-                              <img src="assets/imgs/services/arrow-rb.png" alt="" class="icon-img-70">
+                              <img src="assets/imgs/services/arrow-rb.png" alt="Arrow Right Bottom Icon" class="icon-img-70">
                               <span class="ml-20 text-u fz-14">See Our Designs</span>
                             </a>
                           </div>
@@ -855,7 +871,7 @@
                         <div class="col-md-4">
                           <div class="sm-hide">
                             <a href="#0" class="d-flex align-items-end">
-                              <img src="assets/imgs/services/arrow-rb.png" alt="" class="icon-img-70">
+                              <img src="assets/imgs/services/arrow-rb.png" alt="Arrow Right Bottom Icon" class="icon-img-70">
                               <span class="ml-20 text-u fz-14">View Animations</span>
                             </a>
                           </div>
@@ -906,7 +922,7 @@
                     class="item d-flex align-items-center justify-content-center"
                   >
                     <div class="img">
-                      <img src="assets/imgs/brands/1.svg" alt="" />
+                      <img src="assets/imgs/brands/1.svg" alt="Brand Logo 1" />
                     </div>
                   </div>
                 </div>
@@ -915,7 +931,7 @@
                     class="item d-flex align-items-center justify-content-center"
                   >
                     <div class="img">
-                      <img src="assets/imgs/brands/2.svg" alt="" />
+                      <img src="assets/imgs/brands/2.svg" alt="Brand Logo 2" />
                     </div>
                   </div>
                 </div>
@@ -924,7 +940,7 @@
                     class="item d-flex align-items-center justify-content-center"
                   >
                     <div class="img">
-                      <img src="assets/imgs/brands/3.svg" alt="" />
+                      <img src="assets/imgs/brands/3.svg" alt="Brand Logo 3" />
                     </div>
                   </div>
                 </div>
@@ -933,7 +949,7 @@
                     class="item d-flex align-items-center justify-content-center"
                   >
                     <div class="img">
-                      <img src="assets/imgs/brands/4.svg" alt="" />
+                      <img src="assets/imgs/brands/4.svg" alt="Brand Logo 4" />
                     </div>
                   </div>
                 </div>
@@ -942,7 +958,7 @@
                     class="item d-flex align-items-center justify-content-center"
                   >
                     <div class="img">
-                      <img src="assets/imgs/brands/5.svg" alt="" />
+                      <img src="assets/imgs/brands/5.svg" alt="Brand Logo 5" />
                     </div>
                   </div>
                 </div>
@@ -952,7 +968,7 @@
                   >
                     <div class="cont sub-color">
                       <div class="icon invert">
-                        <img src="../common/imgs/icons/global.svg" alt="" />
+                        <img src="../common/imgs/icons/global.svg" alt="Global Icon" />
                       </div>
                       <span
                         >125+ clients
@@ -980,14 +996,14 @@
                     <h4>
                       Our visual identities, brand designs, and digital experiences
                       help brands grow —
-                      <span class="sub-color inline">
-                        and our clients' satisfaction says it all.
+                      <span class="sub-color inline"
+                        >and our clients' satisfaction says it all.
                       </span>
                     </h4>
                   </div>
                   <div class="gl-rate d-flex align-items-center mt-60">
                     <div class="icon">
-                      <img src="assets/imgs/logo-clutch.svg" alt="" />
+                      <img src="assets/imgs/logo-clutch.svg" alt="Clutch Award Logo" />
                     </div>
                     <div class="cont">
                       <h6>
@@ -1035,7 +1051,7 @@
                       <div class="info d-flex align-items-center mt-40 pt-30 bord-thin-top-light">
                         <div>
                           <div class="img-author">
-                            <img src="assets/imgs/testim/avatar4.webp" alt="" />
+                            <img src="assets/imgs/testim/avatar4.webp" alt="Client Testimonial Avatar" />
                           </div>
                         </div>
                         <div class="info-text">
@@ -1072,7 +1088,7 @@
                       <div class="info d-flex align-items-center mt-40 pt-30 bord-thin-top-light">
                         <div>
                           <div class="img-author">
-                            <img src="assets/imgs/testim/avatar4.webp" alt="" />
+                            <img src="assets/imgs/testim/avatar4.webp" alt="Client Testimonial Avatar" />
                           </div>
                         </div>
                         <div class="info-text">
@@ -1108,7 +1124,7 @@
                       <div class="info d-flex align-items-center mt-40 pt-30 bord-thin-top-light">
                         <div>
                           <div class="img-author">
-                            <img src="assets/imgs/testim/avatar4.webp" alt="" />
+                            <img src="assets/imgs/testim/avatar4.webp" alt="Client Testimonial Avatar" />
                           </div>
                         </div>
                         <div class="info-text">
