--- a/services/email_marketing/index.html
+++ b/services/email_marketing/index.html
@@ -4,59 +4,75 @@
     <!-- Metas -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
-    />
-    <meta
-      name="keywords"
-      content="HTML5 Template Hubfolio Multi-Purpose themeforest"
-    />
-    <meta
-      name="description"
-      content="Hubfolio - Multi-Purpose HTML5 Template"
-    />
-    <meta name="author" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
+    <meta name="keywords" content="email marketing, email campaigns, newsletter, email automation, email strategy, digital marketing, Warsaw" />
+    <meta name="description" content="Professional email marketing services in Warsaw: campaign management, automation, newsletters, and strategy for business growth." />
+    <meta name="author" content="WK.Pages Email Marketing" />
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+    <meta name="language" content="en" />
 
     <!-- Title  -->
-    <title>Hubfolio</title>
+    <title>wk.pages | Email Marketing Services & Campaigns</title>
 
-        <!-- Meta Pixel Code -->
-        <script>
-          !(function (f, b, e, v, n, t, s) {
-            if (f.fbq) return;
-            n = f.fbq = function () {
-              n.callMethod
-                ? n.callMethod.apply(n, arguments)
-                : n.queue.push(arguments);
-            };
-            if (!f._fbq) f._fbq = n;
-            n.push = n;
-            n.loaded = !0;
-            n.version = "2.0";
-            n.queue = [];
-            t = b.createElement(e);
-            t.async = !0;
-            t.src = v;
-            s = b.getElementsByTagName(e)[0];
-            s.parentNode.insertBefore(t, s);
-          })(
-            window,
-            document,
-            "script",
-            "https://connect.facebook.net/en_US/fbevents.js"
-          );
-          fbq("init", "3315422861933178");
-          fbq("track", "PageView");
-        </script>
-        <noscript
-          ><img
-            height="1"
-            width="1"
-            style="display: none"
-            src="https://www.facebook.com/tr?id=3315422861933178&ev=PageView&noscript=1"
-        /></noscript>
-        <!-- End Meta Pixel Code -->
+    <meta property="og:title" content="wk.pages | Email Marketing Services & Campaigns" />
+    <meta property="og:description" content="Professional email marketing services in Warsaw: campaign management, automation, newsletters, and strategy for business growth." />
+    <meta property="og:image" content="https://wkpages.com/assets/imgs/square_logo.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://wkpages.com/services/email_marketing/index.html" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="wk.pages" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="wk.pages | Email Marketing Services & Campaigns" />
+    <meta name="twitter:description" content="Professional email marketing services in Warsaw: campaign management, automation, newsletters, and strategy for business growth." />
+    <meta name="twitter:image" content="https://wkpages.com/assets/imgs/square_logo.jpg" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://wkpages.com/services/email_marketing/index.html" />
+    <link rel="alternate" href="https://wkpages.com/services/email_marketing/index.html" hreflang="en" />
+    <link rel="alternate" href="https://wkpages.com/services/email_marketing/index.html" hreflang="x-default" />
+
+    <!-- Facebook Domain Verification -->
+    <meta name="facebook-domain-verification" content="l3uyvqjwaim3srni70qlbrlzf7xpp0" />
+
+    <!-- Sitemap -->
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
+
+    <!-- Schema.org markup for ProfessionalService -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ProfessionalService",
+        "name": "WK.Pages Email Marketing",
+        "image": "https://wkpages.com/assets/imgs/square_logo.jpg",
+        "description": "Email marketing agency in Warsaw specializing in campaign management, automation, newsletters, and digital strategy.",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Chmielna 25/2",
+          "addressLocality": "Warsaw",
+          "addressRegion": "Mazowieckie",
+          "postalCode": "02-495",
+          "addressCountry": "Poland"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": "52.2297",
+          "longitude": "21.0122"
+        },
+        "url": "https://wkpages.com/services/email_marketing/index.html",
+        "telephone": "+48518922121",
+        "priceRange": "$$",
+        "openingHours": "Mo-Fr 09:00-18:00",
+        "sameAs": [
+          "https://www.facebook.com/profile.php?id=61567880623368",
+          "https://www.instagram.com/wk.pages/profilecard/?igsh=a3dmZ3p4Z3J0bHU5",
+          "https://www.linkedin.com/company/wkpages"
+        ]
+      }
+    </script>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/imgs/favicon.ico" />
@@ -381,10 +397,10 @@
                 <div class="col-lg-6">
                   <div class="imgs">
                     <div class="cube">
-                      <img src="assets/imgs/header/cube.svg" alt="" />
+                      <img src="assets/imgs/header/cube.svg" alt="Decorative Cube Graphic" />
                     </div>
                     <div class="circle">
-                      <img src="assets/imgs/header/circle-badge.svg" alt="" />
+                      <img src="assets/imgs/header/circle-badge.svg" alt="Decorative Circle Badge" />
                     </div>
                   </div>
                 </div>
@@ -657,7 +673,7 @@
                         <p>
                           Reactivate dormant subscribers with targeted win-back
                           emails. We help you reconnect and retain your audience
-                          before they’re gone for good.
+                          before they're gone for good.
                         </p>
                       </div>
                     </div>
@@ -895,7 +911,7 @@
 
               <div class="botm mt-70">
                 <span>
-                  Don’t see the right fit? All services can be purchased
+                  Don't see the right fit? All services can be purchased
                   individually.
                   <a href="#0">Contact Us</a>
                 </span>
@@ -999,7 +1015,7 @@
                     </div>
                     <div class="col-lg-7">
                       <div class="img">
-                        <img src="assets/imgs/works/5.jpg" alt="" />
+                        <img src="assets/imgs/works/5.jpg" alt="Email Marketing Portfolio Example 5" />
                       </div>
                     </div>
                   </div>
@@ -1031,7 +1047,7 @@
                     </div>
                     <div class="col-lg-7">
                       <div class="img">
-                        <img src="assets/imgs/works/6.jpg" alt="" />
+                        <img src="assets/imgs/works/6.jpg" alt="Email Marketing Portfolio Example 6" />
                       </div>
                     </div>
                   </div>
@@ -1064,7 +1080,7 @@
                     </div>
                     <div class="col-lg-7">
                       <div class="img">
-                        <img src="assets/imgs/works/7.png" alt="" />
+                        <img src="assets/imgs/works/7.png" alt="Email Marketing Portfolio Example 7" />
                       </div>
                     </div>
                   </div>
@@ -1095,7 +1111,7 @@
                     </div>
                     <div class="col-lg-7">
                       <div class="img">
-                        <img src="assets/imgs/works/8.jpg" alt="" />
+                        <img src="assets/imgs/works/8.jpg" alt="Email Marketing Portfolio Example 8" />
                       </div>
                     </div>
                   </div>
@@ -1126,7 +1142,7 @@
                     </div>
                     <div class="col-lg-7">
                       <div class="img">
-                        <img src="assets/imgs/works/9.png" alt="" />
+                        <img src="assets/imgs/works/9.png" alt="Email Marketing Portfolio Example 9" />
                       </div>
                     </div>
                   </div>
@@ -1156,7 +1172,7 @@
                     </div>
                     <div class="col-lg-7">
                       <div class="img">
-                        <img src="assets/imgs/works/10.jpg" alt="" />
+                        <img src="assets/imgs/works/10.jpg" alt="Email Marketing Portfolio Example 10" />
                       </div>
                     </div>
                   </div>
