--- a/services/meta_ads/index.html
+++ b/services/meta_ads/index.html
@@ -6,20 +6,82 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
+      content="width=device-width, initial-scale=1, maximum-scale=5"
     />
     <meta
       name="keywords"
-      content="HTML5 Template Hubfolio Multi-Purpose themeforest"
+      content="Meta Ads, Facebook Ads, social media advertising, paid social, digital marketing, Warsaw, Facebook campaigns"
     />
     <meta
       name="description"
-      content="Hubfolio - Multi-Purpose HTML5 Template"
+      content="Meta & Facebook Ads agency in Warsaw: paid social campaigns, digital marketing, and social media advertising for business growth."
     />
-    <meta name="author" content="" />
+    <meta name="author" content="WK.Pages Meta Ads" />
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+    <meta name="language" content="en" />
 
     <!-- Title  -->
-    <title>Hubfolio</title>
+    <title>wk.pages | Meta & Facebook Ads</title>
+
+    <meta property="og:title" content="wk.pages | Meta & Facebook Ads" />
+    <meta property="og:description" content="Meta & Facebook Ads agency in Warsaw: paid social campaigns, digital marketing, and social media advertising for business growth." />
+    <meta property="og:image" content="https://wkpages.com/assets/imgs/square_logo.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://wkpages.com/services/meta_ads/index.html" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="wk.pages" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="wk.pages | Meta & Facebook Ads" />
+    <meta name="twitter:description" content="Meta & Facebook Ads agency in Warsaw: paid social campaigns, digital marketing, and social media advertising for business growth." />
+    <meta name="twitter:image" content="https://wkpages.com/assets/imgs/square_logo.jpg" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://wkpages.com/services/meta_ads/index.html" />
+    <link rel="alternate" href="https://wkpages.com/services/meta_ads/index.html" hreflang="en" />
+    <link rel="alternate" href="https://wkpages.com/services/meta_ads/index.html" hreflang="x-default" />
+
+    <!-- Facebook Domain Verification -->
+    <meta name="facebook-domain-verification" content="l3uyvqjwaim3srni70qlbrlzf7xpp0" />
+
+    <!-- Sitemap -->
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
+
+    <!-- Schema.org markup for ProfessionalService -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ProfessionalService",
+        "name": "WK.Pages Meta Ads",
+        "image": "https://wkpages.com/assets/imgs/square_logo.jpg",
+        "description": "Meta & Facebook Ads agency in Warsaw specializing in paid social, digital marketing, and Facebook campaigns for business growth.",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Chmielna 25/2",
+          "addressLocality": "Warsaw",
+          "addressRegion": "Mazowieckie",
+          "postalCode": "02-495",
+          "addressCountry": "Poland"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": "52.2297",
+          "longitude": "21.0122"
+        },
+        "url": "https://wkpages.com/services/meta_ads/index.html",
+        "telephone": "+48518922121",
+        "priceRange": "$$",
+        "openingHours": "Mo-Fr 09:00-18:00",
+        "sameAs": [
+          "https://www.facebook.com/profile.php?id=61567880623368",
+          "https://www.instagram.com/wk.pages/profilecard/?igsh=a3dmZ3p4Z3J0bHU5",
+          "https://www.linkedin.com/company/wkpages"
+        ]
+      }
+    </script>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/imgs/favicon.ico" />
@@ -378,10 +440,10 @@
                 <div class="col-lg-6">
                   <div class="imgs">
                     <div class="cube">
-                      <img src="assets/imgs/header/cube.svg" alt="" />
+                      <img src="assets/imgs/header/cube.svg" alt="Decorative Cube Graphic" />
                     </div>
                     <div class="circle">
-                      <img src="assets/imgs/header/circle-badge.svg" alt="" />
+                      <img src="assets/imgs/header/circle-badge.svg" alt="Decorative Circle Badge" />
                     </div>
                   </div>
                 </div>
@@ -498,7 +560,7 @@
                           Sell more products with dynamic Facebook ads. We
                           handle everything from catalog setup to full-funnel
                           campaigns, helping you scale efficiently and
-                          profitably through Meta’s commerce features.
+                          profitably through Meta's commerce features.
                         </p>
                       </div>
                     </div>
@@ -1038,7 +1100,7 @@
                     </div>
                     <div class="col-lg-7">
                       <div class="img">
-                        <img src="assets/imgs/works/5.jpg" alt="" />
+                        <img src="assets/imgs/works/5.jpg" alt="Meta Ads Portfolio Example 5" />
                       </div>
                     </div>
                   </div>
@@ -1070,7 +1132,7 @@
                     </div>
                     <div class="col-lg-7">
                       <div class="img">
-                        <img src="assets/imgs/works/6.jpg" alt="" />
+                        <img src="assets/imgs/works/6.jpg" alt="Meta Ads Portfolio Example 6" />
                       </div>
                     </div>
                   </div>
@@ -1103,7 +1165,7 @@
                     </div>
                     <div class="col-lg-7">
                       <div class="img">
-                        <img src="assets/imgs/works/7.png" alt="" />
+                        <img src="assets/imgs/works/7.png" alt="Meta Ads Portfolio Example 7" />
                       </div>
                     </div>
                   </div>
@@ -1134,7 +1196,7 @@
                     </div>
                     <div class="col-lg-7">
                       <div class="img">
-                        <img src="assets/imgs/works/8.jpg" alt="" />
+                        <img src="assets/imgs/works/8.jpg" alt="Meta Ads Portfolio Example 8" />
                       </div>
                     </div>
                   </div>
@@ -1165,7 +1227,7 @@
                     </div>
                     <div class="col-lg-7">
                       <div class="img">
-                        <img src="assets/imgs/works/9.png" alt="" />
+                        <img src="assets/imgs/works/9.png" alt="Meta Ads Portfolio Example 9" />
                       </div>
                     </div>
                   </div>
@@ -1195,7 +1257,7 @@
                     </div>
                     <div class="col-lg-7">
                       <div class="img">
-                        <img src="assets/imgs/works/10.jpg" alt="" />
+                        <img src="assets/imgs/works/10.jpg" alt="Meta Ads Portfolio Example 10" />
                       </div>
                     </div>
                   </div>
