--- a/services/google_ads/index.html
+++ b/services/google_ads/index.html
@@ -4,59 +4,52 @@
     <!-- Metas -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
-    />
-    <meta
-      name="keywords"
-      content="HTML5 Template Hubfolio Multi-Purpose themeforest"
-    />
-    <meta
-      name="description"
-      content="Hubfolio - Multi-Purpose HTML5 Template"
-    />
-    <meta name="author" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
+    <meta name="keywords" content="Google Ads, PPC, pay-per-click, SEM, search engine marketing, digital advertising, Warsaw, Google advertising" />
+    <meta name="description" content="Expert Google Ads & PPC management in Warsaw. Drive traffic, leads, and sales with our certified Google advertising specialists." />
+    <meta name="author" content="WK.Pages Google Ads" />
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+    <meta name="language" content="en" />
 
-        <!-- Meta Pixel Code -->
-        <script>
-          !(function (f, b, e, v, n, t, s) {
-            if (f.fbq) return;
-            n = f.fbq = function () {
-              n.callMethod
-                ? n.callMethod.apply(n, arguments)
-                : n.queue.push(arguments);
-            };
-            if (!f._fbq) f._fbq = n;
-            n.push = n;
-            n.loaded = !0;
-            n.version = "2.0";
-            n.queue = [];
-            t = b.createElement(e);
-            t.async = !0;
-            t.src = v;
-            s = b.getElementsByTagName(e)[0];
-            s.parentNode.insertBefore(t, s);
-          })(
-            window,
-            document,
-            "script",
-            "https://connect.facebook.net/en_US/fbevents.js"
-          );
-          fbq("init", "3315422861933178");
-          fbq("track", "PageView");
-        </script>
-        <noscript
-          ><img
-            height="1"
-            width="1"
-            style="display: none"
-            src="https://www.facebook.com/tr?id=3315422861933178&ev=PageView&noscript=1"
-        /></noscript>
-        <!-- End Meta Pixel Code -->
+    <!-- Meta Pixel Code -->
+    <script>
+      !(function (f, b, e, v, n, t, s) {
+        if (f.fbq) return;
+        n = f.fbq = function () {
+          n.callMethod
+            ? n.callMethod.apply(n, arguments)
+            : n.queue.push(arguments);
+        };
+        if (!f._fbq) f._fbq = n;
+        n.push = n;
+        n.loaded = !0;
+        n.version = "2.0";
+        n.queue = [];
+        t = b.createElement(e);
+        t.async = !0;
+        t.src = v;
+        s = b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t, s);
+      })(
+        window,
+        document,
+        "script",
+        "https://connect.facebook.net/en_US/fbevents.js"
+      );
+      fbq("init", "3315422861933178");
+      fbq("track", "PageView");
+    </script>
+    <noscript
+      ><img
+        height="1"
+        width="1"
+        style="display: none"
+        src="https://www.facebook.com/tr?id=3315422861933178&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
 
     <!-- Title  -->
-    <title>Hubfolio</title>
+    <title>wk.pages | Google Ads & PPC Management</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/imgs/favicon.ico" />
@@ -105,6 +98,67 @@
         user-select: none;
       }
     </style>
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="wk.pages | Google Ads & PPC Management" />
+    <meta property="og:description" content="Expert Google Ads & PPC management in Warsaw. Drive traffic, leads, and sales with our certified Google advertising specialists." />
+    <meta property="og:image" content="https://wkpages.com/assets/imgs/square_logo.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://wkpages.com/services/google_ads/index.html" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="wk.pages" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="wk.pages | Google Ads & PPC Management" />
+    <meta name="twitter:description" content="Expert Google Ads & PPC management in Warsaw. Drive traffic, leads, and sales with our certified Google advertising specialists." />
+    <meta name="twitter:image" content="https://wkpages.com/assets/imgs/square_logo.jpg" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://wkpages.com/services/google_ads/index.html" />
+    <link rel="alternate" href="https://wkpages.com/services/google_ads/index.html" hreflang="en" />
+    <link rel="alternate" href="https://wkpages.com/services/google_ads/index.html" hreflang="x-default" />
+
+    <!-- Facebook Domain Verification -->
+    <meta name="facebook-domain-verification" content="l3uyvqjwaim3srni70qlbrlzf7xpp0" />
+
+    <!-- Sitemap -->
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
+
+    <!-- Schema.org markup for ProfessionalService -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ProfessionalService",
+        "name": "WK.Pages Google Ads",
+        "image": "https://wkpages.com/assets/imgs/square_logo.jpg",
+        "description": "Google Ads & PPC agency in Warsaw specializing in SEM, pay-per-click, and digital advertising for business growth.",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Chmielna 25/2",
+          "addressLocality": "Warsaw",
+          "addressRegion": "Mazowieckie",
+          "postalCode": "02-495",
+          "addressCountry": "Poland"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": "52.2297",
+          "longitude": "21.0122"
+        },
+        "url": "https://wkpages.com/services/google_ads/index.html",
+        "telephone": "+48518922121",
+        "priceRange": "$$",
+        "openingHours": "Mo-Fr 09:00-18:00",
+        "sameAs": [
+          "https://www.facebook.com/profile.php?id=61567880623368",
+          "https://www.instagram.com/wk.pages/profilecard/?igsh=a3dmZ3p4Z3J0bHU5",
+          "https://www.linkedin.com/company/wkpages"
+        ]
+      }
+    </script>
   </head>
 
   <body>
@@ -378,10 +432,10 @@
                 <div class="col-lg-6">
                   <div class="imgs">
                     <div class="cube">
-                      <img src="assets/imgs/header/cube.svg" alt="" />
+                      <img src="assets/imgs/header/cube.svg" alt="Decorative Cube Graphic" />
                     </div>
                     <div class="circle">
-                      <img src="assets/imgs/header/circle-badge.svg" alt="" />
+                      <img src="assets/imgs/header/circle-badge.svg" alt="Decorative Circle Badge" />
                     </div>
                   </div>
                 </div>
@@ -871,12 +925,12 @@
                 <div class="row mt-80">
                     <div class="col-md-6">
                         <div class="img sm-mb30">
-                            <img src="./assets/imgs/services/img1.jpg" alt="">
+                            <img src="./assets/imgs/services/img1.jpg" alt="Google Ads Service Example 1" />
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="img">
-                            <img src="./assets/imgs/services/img2.jpg" alt="">
+                            <img src="./assets/imgs/services/img2.jpg" alt="Google Ads Service Example 2" />
                         </div>
                     </div>
                 </div>
@@ -935,7 +989,7 @@
                     </div>
                     <div class="col-lg-7">
                       <div class="img">
-                        <img src="assets/imgs/works/5.jpg" alt="" />
+                        <img src="assets/imgs/works/5.jpg" alt="Google Ads Portfolio Example 5" />
                       </div>
                     </div>
                   </div>
@@ -967,7 +1021,7 @@
                     </div>
                     <div class="col-lg-7">
                       <div class="img">
-                        <img src="assets/imgs/works/6.jpg" alt="" />
+                        <img src="assets/imgs/works/6.jpg" alt="Google Ads Portfolio Example 6" />
                       </div>
                     </div>
                   </div>
@@ -1000,7 +1054,7 @@
                     </div>
                     <div class="col-lg-7">
                       <div class="img">
-                        <img src="assets/imgs/works/7.png" alt="" />
+                        <img src="assets/imgs/works/7.png" alt="Google Ads Portfolio Example 7" />
                       </div>
                     </div>
                   </div>
@@ -1031,7 +1085,7 @@
                     </div>
                     <div class="col-lg-7">
                       <div class="img">
-                        <img src="assets/imgs/works/8.jpg" alt="" />
+                        <img src="assets/imgs/works/8.jpg" alt="Google Ads Portfolio Example 8" />
                       </div>
                     </div>
                   </div>
@@ -1062,7 +1116,7 @@
                     </div>
                     <div class="col-lg-7">
                       <div class="img">
-                        <img src="assets/imgs/works/9.png" alt="" />
+                        <img src="assets/imgs/works/9.png" alt="Google Ads Portfolio Example 9" />
                       </div>
                     </div>
                   </div>
@@ -1092,7 +1146,7 @@
                     </div>
                     <div class="col-lg-7">
                       <div class="img">
-                        <img src="assets/imgs/works/10.jpg" alt="" />
+                        <img src="assets/imgs/works/10.jpg" alt="Google Ads Portfolio Example 10" />
                       </div>
                     </div>
                   </div>
