--- a/services/web_dev/index.html
+++ b/services/web_dev/index.html
@@ -6,17 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
+      content="width=device-width, initial-scale=1, maximum-scale=5"
     />
     <meta
       name="keywords"
-      content="HTML5 Template Hubfolio Multi-Purpose themeforest"
+      content="web development, e-commerce, website design, custom websites, web applications, digital agency, Warsaw"
     />
     <meta
       name="description"
-      content="Hubfolio - Multi-Purpose HTML5 Template"
+      content="Leading web development agency in Warsaw: custom websites, e-commerce solutions, web applications, and digital strategy for your business."
     />
-    <meta name="author" content="" />
+    <meta name="author" content="WK.Pages Web Development" />
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+    <meta name="language" content="en" />
 
         <!-- Meta Pixel Code -->
         <script>
@@ -56,7 +58,7 @@
         <!-- End Meta Pixel Code -->
 
     <!-- Title  -->
-    <title>Hubfolio</title>
+    <title>wk.pages | Web Development & E-commerce Websites</title>
 
     <!-- Favicon -->
     <link rel="shortcut icon" href="assets/imgs/favicon.ico" />
@@ -76,6 +78,66 @@
 
     <!-- Style for combined style contain common & all pages styles -->
     <!-- <link rel="stylesheet" href="../common/css/combined_style.css"> -->
+
+    <meta property="og:title" content="wk.pages | Web Development & E-commerce Websites" />
+    <meta property="og:description" content="Leading web development agency in Warsaw: custom websites, e-commerce solutions, web applications, and digital strategy for your business." />
+    <meta property="og:image" content="https://wkpages.com/assets/imgs/square_logo.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://wkpages.com/services/web_dev/index.html" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="wk.pages" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="wk.pages | Web Development & E-commerce Websites" />
+    <meta name="twitter:description" content="Leading web development agency in Warsaw: custom websites, e-commerce solutions, web applications, and digital strategy for your business." />
+    <meta name="twitter:image" content="https://wkpages.com/assets/imgs/square_logo.jpg" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://wkpages.com/services/web_dev/index.html" />
+    <link rel="alternate" href="https://wkpages.com/services/web_dev/index.html" hreflang="en" />
+    <link rel="alternate" href="https://wkpages.com/services/web_dev/index.html" hreflang="x-default" />
+
+    <!-- Facebook Domain Verification -->
+    <meta name="facebook-domain-verification" content="l3uyvqjwaim3srni70qlbrlzf7xpp0" />
+
+    <!-- Sitemap -->
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
+
+    <!-- Schema.org markup for ProfessionalService -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "ProfessionalService",
+        "name": "WK.Pages Web Development",
+        "image": "https://wkpages.com/assets/imgs/square_logo.jpg",
+        "description": "Web development agency in Warsaw specializing in custom websites, e-commerce, and web applications for business growth.",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Chmielna 25/2",
+          "addressLocality": "Warsaw",
+          "addressRegion": "Mazowieckie",
+          "postalCode": "02-495",
+          "addressCountry": "Poland"
+        },
+        "geo": {
+          "@type": "GeoCoordinates",
+          "latitude": "52.2297",
+          "longitude": "21.0122"
+        },
+        "url": "https://wkpages.com/services/web_dev/index.html",
+        "telephone": "+48518922121",
+        "priceRange": "$$",
+        "openingHours": "Mo-Fr 09:00-18:00",
+        "sameAs": [
+          "https://www.facebook.com/profile.php?id=61567880623368",
+          "https://www.instagram.com/wk.pages/profilecard/?igsh=a3dmZ3p4Z3J0bHU5",
+          "https://www.linkedin.com/company/wkpages"
+        ]
+      }
+    </script>
   </head>
 
   <body>
